--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -1049,3 +1049,18 @@
   type: Releases
   duration: "2:44"
   fanlink: lnk.bayza.ml/ShowMe
+
+- release: foung-free
+  artists: DJ Phellix, Bayza
+  title: Young & Free
+  cover: young-free
+  album: 
+  genre: Tropical House
+  year: 2022
+  description: 
+  label: Miami Beats
+  video: -vVutcvq5I4
+  date: 2022-06-10 00:00:00
+  type: Releases
+  duration: "3:23"
+  fanlink: lnk.bayza.ml/YoungFree
