--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -1050,7 +1050,7 @@
   duration: "2:44"
   fanlink: lnk.bayza.ml/ShowMe
 
-- release: foung-free
+- release: young-free
   artists: DJ Phellix, Bayza
   title: Young & Free
   cover: young-free
