--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -1064,3 +1064,18 @@
   type: Releases
   duration: "3:23"
   fanlink: lnk.bayza.ml/YoungFree
+
+- release: why-cant-it-be
+  artists: AMiR, Bayza
+  title: Why Can't It Be With Me
+  cover: why-cant-it-be
+  album: 
+  genre: Dance
+  year: 2022
+  description: 
+  label: Storm Music Group
+  video: BRRXzu2Q1-g
+  date: 2022-08-05 00:00:00
+  type: Releases
+  duration: "2:58"
+  fanlink: lnk.bayza.ml/WhyCantItBe
