--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -1079,3 +1079,18 @@
   type: Releases
   duration: "2:58"
   fanlink: lnk.bayza.ml/WhyCantItBe
+
+- release: on-your-mind
+  artists: DJ Phellix, Bayza
+  title: On Your Mind
+  cover: on-your-mind
+  album: 
+  genre: Dance
+  year: 2022
+  description: 
+  label: Different Twins/Twin Girls Records
+  video: 0fdvG4GRRFA
+  date: 2022-09-01 00:00:00
+  type: Releases
+  duration: "2:34"
+  fanlink: lnk.bayza.ml/OnYourMind
