--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -1094,3 +1094,18 @@
   type: Releases
   duration: "2:34"
   fanlink: lnk.bayza.ml/OnYourMind
+
+- release: true-lovers
+  artists: Bayza
+  title: True Lovers
+  cover: true-lovers
+  album: 
+  genre: Deep House
+  year: 2022
+  description: 
+  label: Mark Music Records
+  video: _UNJ54LGdKc
+  date: 2022-11-04 00:00:00
+  type: Releases
+  duration: "3:01"
+  fanlink: lnk.bayza.ml/TrueLovers
