New track: Lunchbox Friends

--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -1109,3 +1109,18 @@
   type: Releases
   duration: "3:01"
   fanlink: lnk.bayza.ml/TrueLovers
+
+- release: lunchbox-friends
+  artists: Bayza, Staarz
+  title: Lunchbox Friends
+  cover: lunchbox-friends
+  album: 
+  genre: Deep House
+  year: 2022
+  description: 
+  label: Gangster City
+  video: HRrD3Mj3sEY
+  date: 2022-12-09 00:00:00
+  type: Releases
+  duration: "2:53"
+  fanlink: lnk.bayza.ml/LunchboxFriends
