--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -1124,3 +1124,18 @@
   type: Releases
   duration: "2:53"
   fanlink: lnk.bayza.ml/LunchboxFriends
+
+- release: madhouse
+  artists: Bayza, Staarz
+  title: Madhouse
+  cover: madhouse
+  album: 
+  genre: Deep House
+  year: 2023
+  description: 
+  label: The Night Drive
+  video: HRrD3Mj3sEY
+  date: 2023-03-10 00:00:00
+  type: Releases
+  duration: "2:34"
+  fanlink: lnk.bayza.ml/Madhouse
