--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -38,7 +38,7 @@
   date: 2019-12-11 00:00:00
   type: Releases
   duration: "4:20"
-  fanlink: bayza.ml/astral
+  fanlink: lnk.bayzamusic.com/astral
 
 - release: mirage
   artists: Bayza
@@ -52,7 +52,7 @@
   date: 2019-10-25 00:00:00
   type: Releases
   duration: "4:03"
-  fanlink: bayza.ml/mirage
+  fanlink: lnk.bayzamusic.com/mirage
 
 - release: genuine
   artists: Bayza
@@ -317,7 +317,7 @@
   type: Bootlegs/Remixes
   link: -bootlegs
   duration: "3:55"
-  fanlink: lnk.bayza.ml/still-learning
+  fanlink: lnk.bayzamusic.com/still-learning
 
 - release: strawberry-shortcake
   artists: Melanie Martinez
@@ -332,7 +332,7 @@
   type: Bootlegs/Remixes
   link: -bootlegs
   duration: "3:15"
-  fanlink: lnk.bayza.ml/strawberry-shortcake
+  fanlink: lnk.bayzamusic.com/strawberry-shortcake
 
 - release: look-at-her-now
   artists: Selena Gomez
@@ -598,7 +598,7 @@
   type: Bootlegs/Remixes
   link: -bootlegs
   duration: "3:23"
-  fanlink: lnk.bayza.ml/not-my-baby
+  fanlink: lnk.bayzamusic.com/not-my-baby
 
 - release: desert-rose-enta-omri
   artists: Noel Kharman
@@ -613,7 +613,7 @@
   type: Bootlegs/Remixes
   link: -bootlegs
   duration: "4:29"
-  fanlink: lnk.bayza.ml/desert-rose
+  fanlink: lnk.bayzamusic.com/desert-rose
 
 - release: everythingiwanted
   artists: Bayza
@@ -627,7 +627,7 @@
   date: 2020-06-05 00:00:00
   type: Releases
   duration: "4:12"
-  fanlink: lnk.bayza.ml/everything-i-wanted
+  fanlink: lnk.bayzamusic.com/everything-i-wanted
 
 - release: alone
   artists: DJ SK & Bayza
@@ -641,7 +641,7 @@
   date: 2020-06-24 00:00:00
   type: Releases
   duration: "4:24"
-  fanlink: lnk.bayza.ml/alone
+  fanlink: lnk.bayzamusic.com/alone
 
 - release: miracle
   artists: Bayza
@@ -655,7 +655,7 @@
   date: 2020-07-10 00:00:00
   type: Releases
   duration: "3:12"
-  fanlink: lnk.bayza.ml/miracle
+  fanlink: lnk.bayzamusic.com/miracle
 
 - release: make-believe
   artists: Eress
@@ -669,7 +669,7 @@
   date: 2020-08-01 00:00:00
   type: Releases
   duration: "4:28"
-  fanlink: lnk.bayza.ml/make-believe
+  fanlink: lnk.bayzamusic.com/make-believe
 
 - release: solace
   artists: Bayza
@@ -683,7 +683,7 @@
   date: 2020-08-28 00:00:00
   type: Releases
   duration: "3:52"
-  fanlink: lnk.bayza.ml/solace
+  fanlink: lnk.bayzamusic.com/solace
 
 - release: fire-drill
   artists: Melanie Martinez
@@ -698,7 +698,7 @@
   type: Bootlegs/Remixes
   link: -bootlegs
   duration: "4:25"
-  fanlink: bayza.ml/fire-drill
+  fanlink: bayzamusic.com/fire-drill
 
 - release: hold-on-to-me
   artists: Dimatis & Bayza
@@ -712,7 +712,7 @@
   date: 2020-09-25 00:00:00
   type: Releases
   duration: "3:27"
-  fanlink: lnk.bayza.ml/hold-on-to-me
+  fanlink: lnk.bayzamusic.com/hold-on-to-me
 
 - release: no-guarantee
   artists: Bayza
@@ -726,7 +726,7 @@
   date: 2020-10-19 00:00:00
   type: Releases
   duration: "3:38"
-  fanlink: lnk.bayza.ml/no-guarantee
+  fanlink: lnk.bayzamusic.com/no-guarantee
 
 - release: reborn
   artists: Bayza & Dimatis
@@ -740,7 +740,7 @@
   date: 2020-10-22 00:00:00
   type: Releases
   duration: "2:42"
-  fanlink: lnk.bayza.ml/reborn
+  fanlink: lnk.bayzamusic.com/reborn
 
 - release: lamentos
   artists: Bayza
@@ -754,7 +754,7 @@
   date: 2020-10-31 00:00:00
   type: Releases
   duration: "3:36"
-  fanlink: lnk.bayza.ml/lamentos
+  fanlink: lnk.bayzamusic.com/lamentos
 
 
 - release: lo-vas-a-olvidar
@@ -770,7 +770,7 @@
   type: Bootlegs/Remixes
   link: -bootlegs
   duration: "3:28"
-  fanlink: lnk.bayza.ml/LVAO
+  fanlink: lnk.bayzamusic.com/LVAO
 
 - release: looking-at-you
   artists: Bayza
@@ -784,7 +784,7 @@
   date: 2021-02-12 00:00:00
   type: Releases
   duration: "3:18"
-  fanlink: lnk.bayza.ml/LookingAtYou
+  fanlink: lnk.bayzamusic.com/LookingAtYou
 
 - release: my-head-my-heart
   artists: Ava Max
@@ -799,7 +799,7 @@
   type: Bootlegs/Remixes
   link: -bootlegs
   duration: "3:33"
-  fanlink: lnk.bayza.ml/my-head-my-heart
+  fanlink: lnk.bayzamusic.com/my-head-my-heart
 
 - release: without-you
   artists: Bayza
@@ -813,7 +813,7 @@
   date: 2021-03-08 00:00:00
   type: Releases
   duration: "2:47"
-  fanlink: lnk.bayza.ml/without-you
+  fanlink: lnk.bayzamusic.com/without-you
 
 - release: you-said-goodbye
   artists: Bayza feat. Giulia Mihai
@@ -827,7 +827,7 @@
   date: 2021-03-31 00:00:00
   type: Releases
   duration: "3:19"
-  fanlink: lnk.bayza.ml/YouSaidGoodbye
+  fanlink: lnk.bayzamusic.com/YouSaidGoodbye
 
 - release: feel-so-lonely
   artists: Bayza
@@ -841,7 +841,7 @@
   date: 2021-04-16 00:00:00
   type: Releases
   duration: "2:48"
-  fanlink: lnk.bayza.ml/FeelSoLonely
+  fanlink: lnk.bayzamusic.com/FeelSoLonely
 
 - release: feels
   artists: DeejaVu X Bayza
@@ -855,7 +855,7 @@
   date: 2021-04-23 00:00:00
   type: Releases
   duration: "2:46"
-  fanlink: lnk.bayza.ml/Feels
+  fanlink: lnk.bayzamusic.com/Feels
 
 - release: take-me-home
   artists: Bayza
@@ -869,7 +869,7 @@
   date: 2021-06-25 00:00:00
   type: Releases
   duration: "2:58"
-  fanlink: lnk.bayza.ml/TakeMeHome
+  fanlink: lnk.bayzamusic.com/TakeMeHome
 
 - release: thumbs-remix
   artists: Sabrina Carpenter
@@ -884,7 +884,7 @@
   type: Bootlegs/Remixes
   link: -bootlegs
   duration: "3:23"
-  fanlink: lnk.bayza.ml/ThumbsRemix
+  fanlink: lnk.bayzamusic.com/ThumbsRemix
 
 - release: pirhan
   artists: DJ Phellix, Bayza, Sheenubb ft. Sant
@@ -898,7 +898,7 @@
   date: 2021-12-15 00:00:00
   type: Releases
   duration: "4:55"
-  fanlink: lnk.bayza.ml/Pirhan
+  fanlink: lnk.bayzamusic.com/Pirhan
 
 - release: desert-rose
   artists: Bayza
@@ -913,7 +913,7 @@
   date: 2021-12-30 00:00:01
   type: Releases
   duration: "3:49"
-  fanlink: lnk.bayza.ml/DesertRose
+  fanlink: lnk.bayzamusic.com/DesertRose
 
 - release: notmybaby
   artists: Bayza
@@ -928,7 +928,7 @@
   date: 2021-12-30 00:00:02
   type: Releases
   duration: "3:19"
-  fanlink: lnk.bayza.ml/NotMyBaby
+  fanlink: lnk.bayzamusic.com/NotMyBaby
 
 - release: myheadmyheart
   artists: Bayza
@@ -943,7 +943,7 @@
   date: 2021-12-30 00:00:03
   type: Releases
   duration: "3:31"
-  fanlink: lnk.bayza.ml/MyHeadMyHeart
+  fanlink: lnk.bayzamusic.com/MyHeadMyHeart
 
 - release: lovasaolvidar
   artists: Bayza
@@ -958,7 +958,7 @@
   date: 2021-12-30 00:00:04
   type: Releases
   duration: "3:18"
-  fanlink: lnk.bayza.ml/LoVasAOlvidar
+  fanlink: lnk.bayzamusic.com/LoVasAOlvidar
 
 - release: thumbs
   artists: Bayza
@@ -973,7 +973,7 @@
   date: 2021-12-30 00:00:05
   type: Releases
   duration: "3:23"
-  fanlink: lnk.bayza.ml/thumbs
+  fanlink: lnk.bayzamusic.com/thumbs
 
 - release: passages
   artists: Bayza
@@ -988,7 +988,7 @@
   date: 2021-12-30 00:00:06
   type: Releases
   duration: "3:00"
-  fanlink: lnk.bayza.ml/Passages
+  fanlink: lnk.bayzamusic.com/Passages
 
 - release: im-falling
   artists: Bayza
@@ -1003,7 +1003,7 @@
   date: 2022-01-21 00:00:00
   type: Releases
   duration: "3:32"
-  fanlink: lnk.bayza.ml/ImFalling
+  fanlink: lnk.bayzamusic.com/ImFalling
 
 - release: call-out
   artists: Dimatis, Bayza
@@ -1018,7 +1018,7 @@
   date: 2022-02-25 00:00:01
   type: Releases
   duration: "3:40"
-  fanlink: lnk.bayza.ml/CallOut
+  fanlink: lnk.bayzamusic.com/CallOut
 
 - release: pieces
   artists: Bayza
@@ -1033,7 +1033,7 @@
   date: 2022-05-06 00:00:00
   type: Releases
   duration: "3:03"
-  fanlink: lnk.bayza.ml/Pieces
+  fanlink: lnk.bayzamusic.com/Pieces
 
 - release: show-me
   artists: dbeet, Bayza
@@ -1048,7 +1048,7 @@
   date: 2022-06-10 00:00:00
   type: Releases
   duration: "2:44"
-  fanlink: lnk.bayza.ml/ShowMe
+  fanlink: lnk.bayzamusic.com/ShowMe
 
 - release: young-free
   artists: DJ Phellix, Bayza
@@ -1063,7 +1063,7 @@
   date: 2022-07-08 00:00:00
   type: Releases
   duration: "3:23"
-  fanlink: lnk.bayza.ml/YoungFree
+  fanlink: lnk.bayzamusic.com/YoungFree
 
 - release: why-cant-it-be
   artists: AMiR, Bayza
@@ -1078,7 +1078,7 @@
   date: 2022-08-05 00:00:00
   type: Releases
   duration: "2:58"
-  fanlink: lnk.bayza.ml/WhyCantItBe
+  fanlink: lnk.bayzamusic.com/WhyCantItBe
 
 - release: on-your-mind
   artists: DJ Phellix, Bayza
@@ -1093,7 +1093,7 @@
   date: 2022-09-01 00:00:00
   type: Releases
   duration: "2:34"
-  fanlink: lnk.bayza.ml/OnYourMind
+  fanlink: lnk.bayzamusic.com/OnYourMind
 
 - release: true-lovers
   artists: Bayza
@@ -1108,7 +1108,7 @@
   date: 2022-11-04 00:00:00
   type: Releases
   duration: "3:01"
-  fanlink: lnk.bayza.ml/TrueLovers
+  fanlink: lnk.bayzamusic.com/TrueLovers
 
 - release: lunchbox-friends
   artists: Bayza, Staarz
@@ -1123,7 +1123,7 @@
   date: 2022-12-09 00:00:00
   type: Releases
   duration: "2:53"
-  fanlink: lnk.bayza.ml/LunchboxFriends
+  fanlink: lnk.bayzamusic.com/LunchboxFriends
 
 - release: madhouse
   artists: Bayza, Staarz
@@ -1138,4 +1138,4 @@
   date: 2023-03-10 00:00:00
   type: Releases
   duration: "2:34"
-  fanlink: lnk.bayza.ml/Madhouse
+  fanlink: lnk.bayzamusic.com/Madhouse
