--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -1139,3 +1139,18 @@
   type: Releases
   duration: "2:34"
   fanlink: lnk.bayzamusic.com/Madhouse
+
+- release: light-comes-up
+  artists: Bayza
+  title: Light Comes Up
+  cover: light-comes-up
+  album: 
+  genre: Chill House
+  year: 2023
+  description: 
+  label: Twins Girls Records
+  video: uesHdgS0o04
+  date: 2023-05-11 00:00:00
+  type: Releases
+  duration: "2:49"
+  fanlink: lnk.bayzamusic.com/LightComesUp
