--- a/.github/workflows/build-page.yml
+++ b/.github/workflows/build-page.yml
@@ -26,6 +26,20 @@ jobs:
       with:
         version: 8
         run_install: false
+
+    - name: Get pnpm store directory 📁
+      id: pnpm-cache
+      shell: bash
+      run: |
+        echo "STORE_PATH=$(pnpm store path)" >> $GITHUB_OUTPUT
+
+    - uses: actions/cache@v3
+      name: Setup pnpm Cache ☁️
+      with:
+        path: ${{ steps.pnpm-cache.outputs.STORE_PATH }}
+        key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+        restore-keys: |
+          ${{ runner.os }}-pnpm-store-
       
     - name: Install Dependencies 📦
       run: pnpm install
