new releases and upcoming releases

--- a/public/data/releases.json
+++ b/public/data/releases.json
@@ -1234,5 +1234,101 @@
     "date": "2023-05-11 00:00:00", 
     "release": "light-comes-up", 
     "genre": "Chill House"
+  },
+  {
+    "album": "Breeze", 
+    "fanlink": "lnk.bayzamusic.com/Awakening", 
+    "description": null, 
+    "title": "Awakening", 
+    "type": "Releases", 
+    "artists": "Bayza", 
+    "cover": "breeze", 
+    "label": "", 
+    "duration": "2:33", 
+    "video": "tSEUdjq4dzs", 
+    "year": 2023, 
+    "date": "2023-07-28 00:00:00", 
+    "release": "awakening", 
+    "genre": "Big Room"
+  },
+  {
+    "album": "Breeze", 
+    "fanlink": "lnk.bayzamusic.com/Fiesta", 
+    "description": null, 
+    "title": "Fiesta", 
+    "type": "Releases", 
+    "artists": "Bayza", 
+    "cover": "breeze", 
+    "label": "", 
+    "duration": "3:42", 
+    "video": "uXM19g7wyFk", 
+    "year": 2023, 
+    "date": "2023-07-28 00:00:01", 
+    "release": "fiesta", 
+    "genre": "Melbourne Bounce"
+  },
+  {
+    "album": "Breeze", 
+    "fanlink": "lnk.bayzamusic.com/Zenith", 
+    "description": null, 
+    "title": "Zenith", 
+    "type": "Releases", 
+    "artists": "Bayza", 
+    "cover": "breeze", 
+    "label": "", 
+    "duration": "2:13", 
+    "video": "h6rcysVZIBI", 
+    "year": 2023, 
+    "date": "2023-07-28 00:00:02", 
+    "release": "zenith", 
+    "genre": "Psytrance"
+  },
+  {
+    "album": "Breeze", 
+    "fanlink": "lnk.bayzamusic.com/Eclipse", 
+    "description": null, 
+    "title": "Eclipse", 
+    "type": "Releases", 
+    "artists": "Bayza", 
+    "cover": "breeze", 
+    "label": "", 
+    "duration": "3:00", 
+    "video": "LGAtjLR89dU", 
+    "year": 2023, 
+    "date": "2023-07-28 00:00:03", 
+    "release": "eclipse", 
+    "genre": "Deep House"
+  },
+  {
+    "album": "Breeze", 
+    "fanlink": "lnk.bayzamusic.com/ImmortalLove", 
+    "description": null, 
+    "title": "Immortal Love", 
+    "type": "Releases", 
+    "artists": "Bayza", 
+    "cover": "breeze", 
+    "label": "", 
+    "duration": "3:16", 
+    "video": "16xwnEkR8tA", 
+    "year": 2023, 
+    "date": "2023-07-28 00:00:04", 
+    "release": "immortal-love", 
+    "genre": "Deep House"
+  },
+  {
+    "album": "Breeze", 
+    "fanlink": "lnk.bayzamusic.com/Breeze", 
+    "description": null, 
+    "title": "Breeze", 
+    "type": "Releases", 
+    "artists": "Bayza", 
+    "cover": "breeze", 
+    "label": "", 
+    "duration": "2:53", 
+    "video": "vIVwrWVBA2E", 
+    "year": 2023, 
+    "date": "2023-07-28 00:00:05", 
+    "release": "breeze", 
+    "genre": "Deep House"
   }
 ]
