--- a/public/data/releases.json
+++ b/public/data/releases.json
@@ -1330,5 +1330,21 @@
     "date": "2023-07-28 00:00:05", 
     "release": "breeze", 
     "genre": "Deep House"
+  },
+  {
+    "album": "", 
+    "fanlink": "lnk.bayzamusic.com/NowOrNever", 
+    "description": null, 
+    "title": "Now Or Never", 
+    "type": "Releases", 
+    "artists": "Bayza", 
+    "cover": "now-or-never", 
+    "label": "DeepShine Records", 
+    "duration": "2:36", 
+    "video": "CS-AQefwkRk", 
+    "year": 2023, 
+    "date": "2023-08-11 00:00:00", 
+    "release": "now-or-never", 
+    "genre": "Deep House"
   }
 ]
