--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -39,6 +39,7 @@
       "singleline": 100
     }],
     "vue/singleline-html-element-content-newline": ["off"],
-    "vue/no-multiple-template-root": ["off"]
+    "vue/no-multiple-template-root": ["off"],
+    "no-trailing-spaces": "error"
   }
 }
