--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nuxt-app",
+  "name": "bayza",
   "private": true,
   "scripts": {
     "build": "nuxt build",
@@ -10,15 +10,14 @@
     "lint": "eslint --ext .ts,.js,.vue --fix --ignore-path .gitignore ."
   },
   "devDependencies": {
-    "@nuxt/devtools": "latest",
-    "@types/node": "^20.8.7",
-    "nuxt": "^3.8.0"
+    "@types/node": "^20.11.17",
+    "nuxt": "^3.10.1"
   },
   "dependencies": {
     "@nuxt/eslint-config": "^0.2.0",
     "aos": "^2.3.4",
     "bootstrap": "^5.3.2",
-    "eslint": "^8.51.0",
-    "nuxt-icon": "^0.5.0"
+    "eslint": "^8.56.0",
+    "nuxt-icon": "^0.6.8"
   }
 }
