--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
   },
   "dependencies": {
     "@nuxt/eslint-config": "^0.2.0",
-    "aos": "^2.3.4",
     "bootstrap": "^5.3.2",
     "eslint": "^8.56.0",
+    "nuxt-aos": "^1.2.3",
     "nuxt-icon": "^0.6.8"
   }
 }
