--- a/package.json
+++ b/package.json
@@ -7,18 +7,18 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "lint": "eslint --fix ."
+    "lint": "eslint --fix --config .config/eslint.mjs"
   },
   "devDependencies": {
-    "@nuxt/eslint": "^0.3.13",
-    "@nuxtjs/sitemap": "^5.2.0",
-    "@types/node": "^20.12.13",
-    "nuxt": "^3.11.2"
+    "@nuxt/eslint": "^0.5.0",
+    "@nuxtjs/sitemap": "^5.3.5",
+    "@types/node": "^22.4.0",
+    "nuxt": "^3.12.4"
   },
   "dependencies": {
+    "@nuxt/icon": "^1.4.5",
     "bootstrap": "^5.3.3",
-    "eslint": "^9.3.0",
-    "nuxt-aos": "^1.2.4",
-    "nuxt-icon": "^0.6.10"
+    "eslint": "^9.9.0",
+    "nuxt-aos": "^1.2.5"
   }
 }
